--- a/test.ipynb
+++ b/test.ipynb
@@ -418,8 +418,8 @@
     "import os\n",
     "from langchain_pinecone import Pinecone\n",
     "\n",
-    "#PINECONE_API_KEY = 'pcsk_Phmgm_8upcHPPwJpCzmGY7Gtr91j2PDSYsvHd4q5G66VECoap8RGpbw7oJJWfq2dqyJ68'\n",
-    "pc=Pinecone(api_key='pcsk_Phmgm_8upcHPPwJpCzmGY7Gtr91j2PDSYsvHd4q5G66VECoap8RGpbw7oJJWfq2dqyJ68')\n",
+    "#PINECONE_API_KEY = ''\n",
+    "pc=Pinecone(api_key='')\n",
     "\n",
     "index = Pinecone.from_documents(index_name = 'llama-text-embed-v2-index', \n",
     "                                documents = documents, \n",
