--- a/test.ipynb
+++ b/test.ipynb
@@ -389,7 +389,7 @@
     "#from pinecone import Pinecone, ServerlessSpec\n",
     "#from langchain_community.vectorstores import Pinecone as PineconeStore\n",
     "\n",
-    "#pc=Pinecone(api_key='pcsk_Phmgm_8upcHPPwJpCzmGY7Gtr91j2PDSYsvHd4q5G66VECoap8RGpbw7oJJWfq2dqyJ68')\n",
+    "#pc=Pinecone(api_key='')\n",
     "     \n"
    ]
   },
